# capivara

./: .gitignore  .gitmodules  AGENTS.md  BOOT-RECIPE.md  Cargo.toml  README.md
.github/workflows/: build-gki-android16-virtio-mmio-tpm.yml  build-gki.yml  ci.yml
assets/: .gitignore  square.icns
crates/capy/: Cargo.toml  build.rs
crates/capy/src/: main.rs  soc.rs
crates/lpprobe/: Cargo.toml
docs/: REPRO.md  STATUS.md
kernel/: README.md
patches/: README.md
patches/gfxstream/: 0001-common-fix-macOS-shared-memory-names.patch  0002-host-propagate-createBlob-failures.patch  0003-host-add-Metal-backed-Vulkan-only-build-support-for-.patch  0004-host-fix-macOS-build-for-decoders-vulkan-gles-compos.patch  0005-host-gl-texture_draw-use-GLSL-ES-3.00-pragmas-under-.patch  0006-third_party-angle-fix-macOS-coverage-gaps-in-Bazel-b.patch  0007-host-gl-implement-the-missing-angle_shader_translato.patch  0008-third_party-angle-host-gl-fix-ANGLE_ENABLE_GLSL-gap-.patch  0009-host-close-the-ASG-host-guest-lost-wakeup-race-in-Ri.patch  0010-host-invoke-the-completion-callback-when-an-export-s.patch  0011-host-gl-force-Core-profile-on-macOS-so-2.1-GLES-cont.patch  0012-host-never-route-PostWorker-tasks-through-the-nonexi.patch  (+4 more)
scripts/: android_sparse_to_raw.py  boot-android.sh  build-all.sh  build-android-gpt.sh  build-gfxstream.sh  extract_android_boot.py  make-android-gpt.py  make-miniroot.sh  make-userdata.sh  patch-initramfs.sh  prepare-userdata.sh  raw2png.py  regen-initramfs.sh  run-capy.sh  setup-macos.sh  smoke-test.sh
snapshots/: .gitignore
(+46 files in other folders)
